--- a/TrabalhoFinal - Gerenciamento de Estoque/TrabalhoFinal - Gerenciamento de Estoque.csproj
+++ b/TrabalhoFinal - Gerenciamento de Estoque/TrabalhoFinal - Gerenciamento de Estoque.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Relatorio.resx">
       <DependentUpon>Relatorio.cs</DependentUpon>
@@ -198,6 +199,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\quadra.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ESSA.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\login.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
